@startuml Class Diagram Simple - QRWare

skinparam classAttributeIconSize 0

title Diagram Klas - Model Domenowy QRWare

' === UZYTKOWNICY ===
package "Uzytkownicy" #DDDDFF {
    class User {
        - id: Long
        - username: String
        - email: String
        - password: String
        - enabled: Boolean
    }
    
    class Role {
        - id: Long
        - name: String
        - description: String
    }
    
    class Permission {
        - id: Long
        - name: String
        - resource: String
        - action: String
    }
    
    User "*" -- "*" Role
    Role "*" -- "*" Permission
}

' === PRODUKTY ===
package "Produkty" #DDFFDD {
    class Product {
        - id: Long
        - name: String
        - sku: String
        - unitOfMeasure: String
        - price: BigDecimal
        - minStockLevel: Integer
        - reorderPoint: Integer
    }
    
    class Category {
        - id: Long
        - name: String
        - code: String
        - sortOrder: Integer
    }
    
    Category "0..1" -- "*" Category : parent
    Product "*" -- "1" Category
}

' === MAGAZYN ===
package "Magazyn" #FFDDDD {
    class Zone {
        - id: Long
        - name: String
        - code: String
        - type: ZoneType
        - temperature: BigDecimal
    }
    
    class Location {
        - id: Long
        - code: String
        - type: LocationType
        - aisle: String
        - rack: String
        - level: String
    }
    
    enum ZoneType {
        RECEIVING
        STORAGE
        COLD_STORAGE
        SHIPPING
    }
    
    enum LocationType {
        RACK
        SHELF
        BIN
        PALLET
    }
    
    Zone "1" -- "*" Location
}

' === INWENTARZ ===
package "Inwentarz" #FFFFDD {
    class InventoryItem {
        - id: Long
        - quantity: BigDecimal
        - reservedQuantity: BigDecimal
        - batchNumber: String
        - expirationDate: LocalDate
        - status: InventoryStatus
        - qrCode: String
    }
    
    class MovementHistory {
        - id: Long
        - movementType: MovementType
        - quantity: BigDecimal
        - performedAt: LocalDateTime
        - reason: String
    }
    
    enum InventoryStatus {
        AVAILABLE
        RESERVED
        DAMAGED
        EXPIRED
    }
    
    enum MovementType {
        RECEIPT
        ISSUE
        TRANSFER
        ADJUSTMENT
    }
    
    InventoryItem "*" -- "1" Product
    InventoryItem "*" -- "1" Location
    MovementHistory "*" -- "1" InventoryItem
    MovementHistory "*" -- "1" User : performedBy
}

' === ZLECENIA ===
package "Zlecenia" #DDDDFF {
    class Order {
        - id: Long
        - orderNumber: String
        - type: OrderType
        - status: OrderStatus
        - priority: OrderPriority
        - expectedDate: LocalDateTime
    }
    
    class OrderItem {
        - id: Long
        - quantity: BigDecimal
        - pickedQuantity: BigDecimal
        - status: OrderItemStatus
    }
    
    enum OrderType {
        INBOUND
        OUTBOUND
        TRANSFER
        PICK
    }
    
    enum OrderStatus {
        CREATED
        ASSIGNED
        IN_PROGRESS
        COMPLETED
        CANCELLED
    }
    
    Order "1" -- "*" OrderItem
    Order "*" -- "1" User : createdBy
    Order "*" -- "0..1" User : assignedTo
    OrderItem "*" -- "1" Product
}

' === QR ===
package "QR" #FFDDFF {
    class QRCodeData {
        - id: Long
        - type: QRCodeType
        - referenceId: Long
        - content: String
        - imagePath: String
    }
    
    enum QRCodeType {
        PRODUCT
        INVENTORY
        LOCATION
    }
    
    QRCodeData "*" -- "1" User : generatedBy
}

@enduml
